<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome_user">"Welcome "</string>
    <string name="submit_answer">Submit</string>
    <string name="start_quiz">Start quiz</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="next_button">Next</string>
    <string name="congratulations">Congratulations, your name!</string>
    <string name="finish">FINISH</string>
    <string name="take_new_quiz">TAKE NEW QUIZ</string>
    <string name="your_score">YOUR SCORE:\n4/5</string>
</resources>